# proto/gen/api/v1/ai_login_grpc.pb.go
@@ -1,0 +1,316 @@
+// Code generated by protoc-gen-go-grpc. DO NOT EDIT.
+// versions:
+// - protoc-gen-go-grpc v1.6.1
+// - protoc             (unknown)
+// source: api/v1/ai_login.proto
+
+package apiv1
+
+import (
+	types "app/proto/gen/types"
+	context "context"
+	grpc "google.golang.org/grpc"
+	codes "google.golang.org/grpc/codes"
+	status "google.golang.org/grpc/status"
+)
+
+// This is a compile-time assertion to ensure that this generated file
+// is compatible with the grpc package it is being compiled against.
+// Requires gRPC-Go v1.64.0 or later.
+const _ = grpc.SupportPackageIsVersion9
+
+const (
+	AILoginService_Init_FullMethodName = "/fifsky.blog.api.v1.AILoginService/Init"
+	AILoginService_Chat_FullMethodName = "/fifsky.blog.api.v1.AILoginService/Chat"
+)
+
+// AILoginServiceClient is the client API for AILoginService service.
+//
+// For semantics around ctx use and closing/ending streaming RPCs, please refer to https://pkg.go.dev/google.golang.org/grpc/?tab=doc#ClientConn.NewStream.
+//
+// AILoginService AI登录服务
+type AILoginServiceClient interface {
+	// Init 初始化AI登录会话
+	Init(ctx context.Context, in *AILoginInitRequest, opts ...grpc.CallOption) (*AILoginInitResponse, error)
+	// Chat AI对话验证
+	Chat(ctx context.Context, in *AILoginChatRequest, opts ...grpc.CallOption) (*AILoginChatResponse, error)
+}
+
+type aILoginServiceClient struct {
+	cc grpc.ClientConnInterface
+}
+
+func NewAILoginServiceClient(cc grpc.ClientConnInterface) AILoginServiceClient {
+	return &aILoginServiceClient{cc}
+}
+
+func (c *aILoginServiceClient) Init(ctx context.Context, in *AILoginInitRequest, opts ...grpc.CallOption) (*AILoginInitResponse, error) {
+	cOpts := append([]grpc.CallOption{grpc.StaticMethod()}, opts...)
+	out := new(AILoginInitResponse)
+	err := c.cc.Invoke(ctx, AILoginService_Init_FullMethodName, in, out, cOpts...)
+	if err != nil {
+		return nil, err
+	}
+	return out, nil
+}
+
+func (c *aILoginServiceClient) Chat(ctx context.Context, in *AILoginChatRequest, opts ...grpc.CallOption) (*AILoginChatResponse, error) {
+	cOpts := append([]grpc.CallOption{grpc.StaticMethod()}, opts...)
+	out := new(AILoginChatResponse)
+	err := c.cc.Invoke(ctx, AILoginService_Chat_FullMethodName, in, out, cOpts...)
+	if err != nil {
+		return nil, err
+	}
+	return out, nil
+}
+
+// AILoginServiceServer is the server API for AILoginService service.
+// All implementations must embed UnimplementedAILoginServiceServer
+// for forward compatibility.
+//
+// AILoginService AI登录服务
+type AILoginServiceServer interface {
+	// Init 初始化AI登录会话
+	Init(context.Context, *AILoginInitRequest) (*AILoginInitResponse, error)
+	// Chat AI对话验证
+	Chat(context.Context, *AILoginChatRequest) (*AILoginChatResponse, error)
+	mustEmbedUnimplementedAILoginServiceServer()
+}
+
+// UnimplementedAILoginServiceServer must be embedded to have
+// forward compatible implementations.
+//
+// NOTE: this should be embedded by value instead of pointer to avoid a nil
+// pointer dereference when methods are called.
+type UnimplementedAILoginServiceServer struct{}
+
+func (UnimplementedAILoginServiceServer) Init(context.Context, *AILoginInitRequest) (*AILoginInitResponse, error) {
+	return nil, status.Error(codes.Unimplemented, "method Init not implemented")
+}
+func (UnimplementedAILoginServiceServer) Chat(context.Context, *AILoginChatRequest) (*AILoginChatResponse, error) {
+	return nil, status.Error(codes.Unimplemented, "method Chat not implemented")
+}
+func (UnimplementedAILoginServiceServer) mustEmbedUnimplementedAILoginServiceServer() {}
+func (UnimplementedAILoginServiceServer) testEmbeddedByValue()                        {}
+
+// UnsafeAILoginServiceServer may be embedded to opt out of forward compatibility for this service.
+// Use of this interface is not recommended, as added methods to AILoginServiceServer will
+// result in compilation errors.
+type UnsafeAILoginServiceServer interface {
+	mustEmbedUnimplementedAILoginServiceServer()
+}
+
+func RegisterAILoginServiceServer(s grpc.ServiceRegistrar, srv AILoginServiceServer) {
+	// If the following call panics, it indicates UnimplementedAILoginServiceServer was
+	// embedded by pointer and is nil.  This will cause panics if an
+	// unimplemented method is ever invoked, so we test this at initialization
+	// time to prevent it from happening at runtime later due to I/O.
+	if t, ok := srv.(interface{ testEmbeddedByValue() }); ok {
+		t.testEmbeddedByValue()
+	}
+	s.RegisterService(&AILoginService_ServiceDesc, srv)
+}
+
+func _AILoginService_Init_Handler(srv interface{}, ctx context.Context, dec func(interface{}) error, interceptor grpc.UnaryServerInterceptor) (interface{}, error) {
+	in := new(AILoginInitRequest)
+	if err := dec(in); err != nil {
+		return nil, err
+	}
+	if interceptor == nil {
+		return srv.(AILoginServiceServer).Init(ctx, in)
+	}
+	info := &grpc.UnaryServerInfo{
+		Server:     srv,
+		FullMethod: AILoginService_Init_FullMethodName,
+	}
+	handler := func(ctx context.Context, req interface{}) (interface{}, error) {
+		return srv.(AILoginServiceServer).Init(ctx, req.(*AILoginInitRequest))
+	}
+	return interceptor(ctx, in, info, handler)
+}
+
+func _AILoginService_Chat_Handler(srv interface{}, ctx context.Context, dec func(interface{}) error, interceptor grpc.UnaryServerInterceptor) (interface{}, error) {
+	in := new(AILoginChatRequest)
+	if err := dec(in); err != nil {
+		return nil, err
+	}
+	if interceptor == nil {
+		return srv.(AILoginServiceServer).Chat(ctx, in)
+	}
+	info := &grpc.UnaryServerInfo{
+		Server:     srv,
+		FullMethod: AILoginService_Chat_FullMethodName,
+	}
+	handler := func(ctx context.Context, req interface{}) (interface{}, error) {
+		return srv.(AILoginServiceServer).Chat(ctx, req.(*AILoginChatRequest))
+	}
+	return interceptor(ctx, in, info, handler)
+}
+
+// AILoginService_ServiceDesc is the grpc.ServiceDesc for AILoginService service.
+// It's only intended for direct use with grpc.RegisterService,
+// and not to be introspected or modified (even as a copy)
+var AILoginService_ServiceDesc = grpc.ServiceDesc{
+	ServiceName: "fifsky.blog.api.v1.AILoginService",
+	HandlerType: (*AILoginServiceServer)(nil),
+	Methods: []grpc.MethodDesc{
+		{
+			MethodName: "Init",
+			Handler:    _AILoginService_Init_Handler,
+		},
+		{
+			MethodName: "Chat",
+			Handler:    _AILoginService_Chat_Handler,
+		},
+	},
+	Streams:  []grpc.StreamDesc{},
+	Metadata: "api/v1/ai_login.proto",
+}
+
+const (
+	AIAuthService_SetupProfile_FullMethodName = "/fifsky.blog.api.v1.AIAuthService/SetupProfile"
+	AIAuthService_GetProfile_FullMethodName   = "/fifsky.blog.api.v1.AIAuthService/GetProfile"
+)
+
+// AIAuthServiceClient is the client API for AIAuthService service.
+//
+// For semantics around ctx use and closing/ending streaming RPCs, please refer to https://pkg.go.dev/google.golang.org/grpc/?tab=doc#ClientConn.NewStream.
+//
+// AIAuthService AI认证管理服务（需登录）
+type AIAuthServiceClient interface {
+	// SetupProfile 设置身份特征
+	SetupProfile(ctx context.Context, in *ProfileSetupRequest, opts ...grpc.CallOption) (*types.IDResponse, error)
+	// GetProfile 获取身份特征
+	GetProfile(ctx context.Context, in *GetProfileRequest, opts ...grpc.CallOption) (*ProfileResponse, error)
+}
+
+type aIAuthServiceClient struct {
+	cc grpc.ClientConnInterface
+}
+
+func NewAIAuthServiceClient(cc grpc.ClientConnInterface) AIAuthServiceClient {
+	return &aIAuthServiceClient{cc}
+}
+
+func (c *aIAuthServiceClient) SetupProfile(ctx context.Context, in *ProfileSetupRequest, opts ...grpc.CallOption) (*types.IDResponse, error) {
+	cOpts := append([]grpc.CallOption{grpc.StaticMethod()}, opts...)
+	out := new(types.IDResponse)
+	err := c.cc.Invoke(ctx, AIAuthService_SetupProfile_FullMethodName, in, out, cOpts...)
+	if err != nil {
+		return nil, err
+	}
+	return out, nil
+}
+
+func (c *aIAuthServiceClient) GetProfile(ctx context.Context, in *GetProfileRequest, opts ...grpc.CallOption) (*ProfileResponse, error) {
+	cOpts := append([]grpc.CallOption{grpc.StaticMethod()}, opts...)
+	out := new(ProfileResponse)
+	err := c.cc.Invoke(ctx, AIAuthService_GetProfile_FullMethodName, in, out, cOpts...)
+	if err != nil {
+		return nil, err
+	}
+	return out, nil
+}
+
+// AIAuthServiceServer is the server API for AIAuthService service.
+// All implementations must embed UnimplementedAIAuthServiceServer
+// for forward compatibility.
+//
+// AIAuthService AI认证管理服务（需登录）
+type AIAuthServiceServer interface {
+	// SetupProfile 设置身份特征
+	SetupProfile(context.Context, *ProfileSetupRequest) (*types.IDResponse, error)
+	// GetProfile 获取身份特征
+	GetProfile(context.Context, *GetProfileRequest) (*ProfileResponse, error)
+	mustEmbedUnimplementedAIAuthServiceServer()
+}
+
+// UnimplementedAIAuthServiceServer must be embedded to have
+// forward compatible implementations.
+//
+// NOTE: this should be embedded by value instead of pointer to avoid a nil
+// pointer dereference when methods are called.
+type UnimplementedAIAuthServiceServer struct{}
+
+func (UnimplementedAIAuthServiceServer) SetupProfile(context.Context, *ProfileSetupRequest) (*types.IDResponse, error) {
+	return nil, status.Error(codes.Unimplemented, "method SetupProfile not implemented")
+}
+func (UnimplementedAIAuthServiceServer) GetProfile(context.Context, *GetProfileRequest) (*ProfileResponse, error) {
+	return nil, status.Error(codes.Unimplemented, "method GetProfile not implemented")
+}
+func (UnimplementedAIAuthServiceServer) mustEmbedUnimplementedAIAuthServiceServer() {}
+func (UnimplementedAIAuthServiceServer) testEmbeddedByValue()                       {}
+
+// UnsafeAIAuthServiceServer may be embedded to opt out of forward compatibility for this service.
+// Use of this interface is not recommended, as added methods to AIAuthServiceServer will
+// result in compilation errors.
+type UnsafeAIAuthServiceServer interface {
+	mustEmbedUnimplementedAIAuthServiceServer()
+}
+
+func RegisterAIAuthServiceServer(s grpc.ServiceRegistrar, srv AIAuthServiceServer) {
+	// If the following call panics, it indicates UnimplementedAIAuthServiceServer was
+	// embedded by pointer and is nil.  This will cause panics if an
+	// unimplemented method is ever invoked, so we test this at initialization
+	// time to prevent it from happening at runtime later due to I/O.
+	if t, ok := srv.(interface{ testEmbeddedByValue() }); ok {
+		t.testEmbeddedByValue()
+	}
+	s.RegisterService(&AIAuthService_ServiceDesc, srv)
+}
+
+func _AIAuthService_SetupProfile_Handler(srv interface{}, ctx context.Context, dec func(interface{}) error, interceptor grpc.UnaryServerInterceptor) (interface{}, error) {
+	in := new(ProfileSetupRequest)
+	if err := dec(in); err != nil {
+		return nil, err
+	}
+	if interceptor == nil {
+		return srv.(AIAuthServiceServer).SetupProfile(ctx, in)
+	}
+	info := &grpc.UnaryServerInfo{
+		Server:     srv,
+		FullMethod: AIAuthService_SetupProfile_FullMethodName,
+	}
+	handler := func(ctx context.Context, req interface{}) (interface{}, error) {
+		return srv.(AIAuthServiceServer).SetupProfile(ctx, req.(*ProfileSetupRequest))
+	}
+	return interceptor(ctx, in, info, handler)
+}
+
+func _AIAuthService_GetProfile_Handler(srv interface{}, ctx context.Context, dec func(interface{}) error, interceptor grpc.UnaryServerInterceptor) (interface{}, error) {
+	in := new(GetProfileRequest)
+	if err := dec(in); err != nil {
+		return nil, err
+	}
+	if interceptor == nil {
+		return srv.(AIAuthServiceServer).GetProfile(ctx, in)
+	}
+	info := &grpc.UnaryServerInfo{
+		Server:     srv,
+		FullMethod: AIAuthService_GetProfile_FullMethodName,
+	}
+	handler := func(ctx context.Context, req interface{}) (interface{}, error) {
+		return srv.(AIAuthServiceServer).GetProfile(ctx, req.(*GetProfileRequest))
+	}
+	return interceptor(ctx, in, info, handler)
+}
+
+// AIAuthService_ServiceDesc is the grpc.ServiceDesc for AIAuthService service.
+// It's only intended for direct use with grpc.RegisterService,
+// and not to be introspected or modified (even as a copy)
+var AIAuthService_ServiceDesc = grpc.ServiceDesc{
+	ServiceName: "fifsky.blog.api.v1.AIAuthService",
+	HandlerType: (*AIAuthServiceServer)(nil),
+	Methods: []grpc.MethodDesc{
+		{
+			MethodName: "SetupProfile",
+			Handler:    _AIAuthService_SetupProfile_Handler,
+		},
+		{
+			MethodName: "GetProfile",
+			Handler:    _AIAuthService_GetProfile_Handler,
+		},
+	},
+	Streams:  []grpc.StreamDesc{},
+	Metadata: "api/v1/ai_login.proto",
+}
